Upd: add "set.hpp" and "typebase.hpp"; almost finish "User" with some ambiguous instructions left to ask about.

--- a/BackEnd/CMakeLists.txt
+++ b/BackEnd/CMakeLists.txt
@@ -9,4 +9,7 @@ include_directories(db)
 include_directories(lib)
 
 add_executable(code main.cpp
-        lib/mytools.hpp)
+        src/system/system.cpp
+        src/order/order.cpp
+        src/user/user.cpp
+        src/train/train.cpp)
